--- a/examples/text_summarization/run.ipynb
+++ b/examples/text_summarization/run.ipynb
@@ -42,7 +42,8 @@
     "### Install Required packages\n",
     "- [PyTorch](https://pytorch.org/get-started/locally/): Deep learning framework.\n",
     "- [Hugging Face Transformers](https://huggingface.co/docs/transformers/installation): To use pretrained state-of-the-art models.\n",
-    "- [Hugging Face Datasets](https://pypi.org/project/datasets/): Use public Hugging Face datasets"
+    "- [Hugging Face Datasets](https://pypi.org/project/datasets/): Use public Hugging Face datasets\n",
+    "- [NLTK](https://www.nltk.org/install.html): Use NLTK for sentiment analysis"
    ]
   },
   {
@@ -52,7 +53,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#!pip install uptrain transformers nltk datasets"
+    "#!pip install uptrain torch transformers nltk datasets"
    ]
   },
   {
@@ -62,22 +63,15 @@
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/sourabhagrawal/miniconda3/envs/speech_to_text/lib/python3.10/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from transformers import AutoTokenizer, AutoModelForSeq2SeqLM\n",
     "from datasets import load_dataset\n",
     "import uptrain\n",
     "import json\n",
+    "import nltk\n",
+    "nltk.download('vader_lexicon')\n",
     "from nltk.sentiment.vader import SentimentIntensityAnalyzer\n",
     "import time\n",
     "\n",
@@ -190,7 +184,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "wikihowAll.csv already present\n"
+      "Starting to download wikihowAll.csv\n",
+      "Successfully installed wget\n",
+      "Data downloaded\n",
+      "Prepared Wikihow Dataset\n"
      ]
     },
     {
@@ -198,8 +195,27 @@
      "output_type": "stream",
      "text": [
       "Using custom data configuration default-74664f2ff2d24c20\n",
-      "Found cached dataset csv (/Users/sourabhagrawal/.cache/huggingface/datasets/csv/default-74664f2ff2d24c20/0.0.0/6b34fb8fcf56f7c8ba51dc895bfa2bfbe43546f190a60fcf74bb5e8afdcc2317)\n",
-      "100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████| 1/1 [00:00<00:00, 24.35it/s]\n",
+      "Found cached dataset csv (/Users/sourabhagrawal/.cache/huggingface/datasets/csv/default-74664f2ff2d24c20/0.0.0/6b34fb8fcf56f7c8ba51dc895bfa2bfbe43546f190a60fcf74bb5e8afdcc2317)\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "347f84361ff84e20abadce7ff65e8fef",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       "Loading cached processed dataset at /Users/sourabhagrawal/.cache/huggingface/datasets/csv/default-74664f2ff2d24c20/0.0.0/6b34fb8fcf56f7c8ba51dc895bfa2bfbe43546f190a60fcf74bb5e8afdcc2317/cache-841d74d37d757b40.arrow\n"
      ]
     },
@@ -248,11 +264,18 @@
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Flattening the indices: 100%|█████████████████████████████████████████████████████████████████████████████████| 1/1 [00:00<00:00, 57.52ba/s]\n"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "dcbc121219af47a1a99bffd31f9d2275",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Flattening the indices:   0%|          | 0/1 [00:00<?, ?ba/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     },
     {
      "data": {
@@ -290,19 +313,26 @@
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████| 1/1 [00:00<00:00, 97.35ba/s]\n"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0d517a34aebf489d9ad07c3bfa1b1afb",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/1 [00:00<?, ?ba/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'model_input_text_to_summarize': \";\\n, Two are on the lantern, one is on the floor. One is on the money holder, figure out some more!\\n\\n, You're not the only one who can slip on that puddle.\\n\\n, Here is another rhyme to help you: Sir Rebral throws rocks at you. Do it to him. He hits you up with the ground. Sling the boulder on the top shelf.\\n\\n, Go to the sewer. Keep turning the pipes until you're close to the platform for the second time.\\n\\n, Jump to the top, but never, ever stop. Turn the wheel, avoid the flies. Jump to Ratman, arrest the crime.\\n\\n, Jump on the fence and jump on the car. Go to the magnet on top of the yellow thing, turn it, BOOM he turns into a bar. He'll pick it up and toss it at you. Use the magnet again. Use the car bar, too.\\n\\n, You can fly now. Go to the hotel and jump up.\\n\\n, Avoid the beams. Arrest her. Foil her schemes.\\n\\n\"} \n",
+      "{'model_input_text_to_summarize': \" She smiles and stuff. Don't be afraid to laugh loudly. Misa is loud, and rude sometimes! Speak your mind.\\n\\n, So if you have a boyfriend, do the same. Be faithful. But in the beginning, when she contacts Kira, she is border lining stalker-esque. Don't do this. Do not stalk people who catch your interest or you admire. You could get a restraining order.\\n\\n, She doesn't walk with her head down. She isn't afraid of anyone. Don't fear yourself or anyone else. Just be who you are and shun all who tell you otherwise!\\n\\n, Misa wears A LOT of accessories, be it chains, skulls, necklaces, or zippers; just be sure not to overdo it...\\n\\n\"} \n",
       "\n",
-      "{'model_output_summary': ['Sir Rebral throws rocks at you, sling the boulder on the top shelf ']}\n"
+      "{'model_output_summary': [\"Misa is border lining stalker-esque. she doesn't walk with her\"]}\n"
      ]
     }
    ],
@@ -346,6 +376,22 @@
     "tags": []
    },
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generated bert embeddings for 0 training samples\n",
+      "Generated bert embeddings for 100 training samples\n",
+      "Generated bert embeddings for 200 training samples\n",
+      "Generated bert embeddings for 300 training samples\n",
+      "Generated bert embeddings for 400 training samples\n",
+      "Generated bert embeddings for 500 training samples\n",
+      "Generated bert embeddings for 600 training samples\n",
+      "Generated bert embeddings for 700 training samples\n",
+      "Generated bert embeddings for 800 training samples\n",
+      "Generated bert embeddings for 900 training samples\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -428,8 +474,8 @@
       "\n",
       "  You can now view your Streamlit app in your browser.\n",
       "\n",
-      "  Local URL: http://localhost:8501\n",
-      "  Network URL: http://192.168.6.92:8501\n",
+      "  Local URL: http://localhost:8502\n",
+      "  Network URL: http://192.168.6.92:8502\n",
       "\n",
       "  For better performance, install the Watchdog module:\n",
       "\n",
@@ -595,25 +641,18 @@
     {
      "data": {
       "text/plain": [
-       "['\"reels are designed to hang down from the rod, not rest above it like spincasting\"',\n",
-       " '\"you will need a pair of circular needles that measure at least 32\\\\\". check\"',\n",
-       " '\"draw a circle in the middle of the kidney bean (the circle is the nose). add\"',\n",
-       " '\"you can always add more images later. you can switch between photos and other albums by tapping\"',\n",
+       "['\"\\'exploits\\' are a way to increase hip-fire accuracy. \\'\"',\n",
+       " '\"the egg is cooled by hand and taps each end on a hard surface.\"',\n",
        " '\",,,,,,,,,,,,,,,,,,,\"',\n",
-       " '\"if you\\'re hurt, let out those tears, let out those tears, cry,\"',\n",
-       " '\"a good relationship is built on communication, openness, honesty. a good relationship\"',\n",
-       " '\"if your cough is caused by a bacterial infection, your doctor may prescribe antibiotics\"',\n",
-       " '\"\\\\\"Taps\\\\\" is played on virtually any instrument. the sheet music above uses\"',\n",
-       " '\"the fingerless wolf whistle is achieved through lip and tongue placement. pull your bottom lip\"',\n",
-       " '\"rhubarb is edible, but leaves themselves are toxic. add 1 teaspoon of\"',\n",
-       " '\"a neigh is a very long sound that is the combination of a \"',\n",
-       " '\"you can find this email in the email account associated with your Netflix account. if you\"',\n",
-       " '\"you can clip or pinch the leaves away from the stems. use a salad spin\"',\n",
-       " '\"don\\'t let the desire to do something perfectly stop you from doing the thing. don\"',\n",
-       " '\"Wiener dogs love to please.be patient and firm as you train your wiener dog to\"',\n",
-       " '\"you can be creative with your supplies, depending on what you have at home. scrap,\"',\n",
-       " '\"scallops cook very quickly, so you do not want to defrost them under hot\"',\n",
-       " '\"the intersecting Chords Theorem is a resemblance\"']"
+       " '\"julian zelizer: you may be able to talk about abuse with someone you\"',\n",
+       " '\",,,,,,,,,,,,,,,,,,\"',\n",
+       " '\"asbestos was molded into many different shapes and sizes to fill different needs.\"',\n",
+       " '\"sexual abstinence can involve kissing, embracing, erotic touching, for\"',\n",
+       " '\"children often get upset when they are injured. they are crying significantly more than a normal\"',\n",
+       " '\"bacteria from a throat infection can spread to the fluid in your middle ear. symptoms\"',\n",
+       " '\"\\\\\"to me\\\\\" (indirect pronoun) should come first, then \\\\\"it\\\\\"\"',\n",
+       " '\",,,,,,,,,,,,,,,,,,\"',\n",
+       " '\",,,,,,,,,,,,,,,,,,,\"']"
       ]
      },
      "execution_count": 12,
@@ -784,46 +823,32 @@
      "data": {
       "text/plain": [
        "(['\",,,,,,,,,,,,,,,,,,\"',\n",
-       "  '\",,,,,,,,,,,,,,,,,,\"',\n",
-       "  '\",,,,,,,,,,\"',\n",
        "  '\",,,,,,,,,,,,,,,,,,,\"',\n",
        "  '\",,,,,,,,,,,,,,,,,,\"',\n",
+       "  '\",,,,,,,,,,\"',\n",
+       "  '\",,, and you are ready to eat.\"',\n",
+       "  '\",,,,,,,,,,,,,,,,,,\"',\n",
+       "  '\",,,,,,,,,,\"',\n",
+       "  '\",,,,,,,,,, \"',\n",
        "  '\",,,,,,,,,, \"',\n",
        "  '\",,,,,,,,,,,,,,,,,,\"',\n",
-       "  '\",,,, your partner can help you up.\"',\n",
-       "  '\",,,,,,,,,,,,,,,,,,\"'],\n",
-       " ['\"summarize: \\\\n\\\\n\\\\n\\\\n;\\\\n, Mix thoroughly.\\\\n\\\\n\\\\n\\\\n\\\\n\\\\n,, Continue stirring.\\\\n\\\\n\\\\n\\\\n\\\\n\\\\n,,,,,\"',\n",
-       "  '\"summarize: ;\\\\n,,,,,,,,,,\"',\n",
+       "  '\",,,,,,,,,,,,,,,,,,,\"'],\n",
+       " ['\"summarize: ;\\\\n, (For Windows user, right click on the photo >> Open with >> Select Photoshop.)\\\\n\\\\n, Commonly it is in the left side of your screen on the tools window.\\\\n\\\\n,,, Re-position your text if you want.\\\\n\\\\n, You can change font style, font color, font size etc. there. In order to format your text, you\\'ll need to highlight it before making your desired changes.\\\\n\\\\n, Select the location on your drive where you want to save the photo. Now give a sweet name to your photo. Choose the file format from the dropdown list and click on save. Your new photo with text is saved in that location.\\\\n\\\\n,\"',\n",
+       "  '\"summarize: ,,,, Stir well after adding each spoon.\\\\n\\\\n,\"',\n",
+       "  '\"summarize: ;\\\\n,,,,,,,,,,,,,\"',\n",
        "  '\"summarize: ,,,\"',\n",
-       "  '\"summarize: ;\\\\n,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,\"',\n",
-       "  '\"summarize: ;\\\\n,,,,,,,,,,,,,,\"',\n",
+       "  '\"summarize: ;\\\\n,, (optional)\\\\n\\\\n,,, And you are ready to eat.\\\\n\\\\n,\"',\n",
+       "  '\"summarize: ;\\\\n,,,,,\"',\n",
+       "  '\"summarize: ;\\\\n,\\\\n\\\\n,,,\\\\n\\\\n,\"',\n",
        "  '\"summarize: ;\\\\n,,,,\"',\n",
-       "  '\"summarize: ;\\\\n,,,,,,,,,,,,,(click the frames to change frame your editing).\\\\n\\\\n,,,,\\\\\".\\\\n\\\\n,,\"',\n",
-       "  '\"summarize: ,,, Your partner can help you up.\\\\n\\\\n\"',\n",
-       "  '\"summarize: ;\\\\n,,,,,,,,,,,!\\\\n\\\\n\"'])"
+       "  '\"summarize: ,,,,,\"',\n",
+       "  '\"summarize: ,,,,,,,,, (Balls are in Entities tab)\\\\n\\\\n,,\"',\n",
+       "  '\"summarize: ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,\"'])"
       ]
      },
      "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  Stopping...\n",
-      "\n",
-      "  You can now view your Streamlit app in your browser.\n",
-      "\n",
-      "  Local URL: http://localhost:8501\n",
-      "  Network URL: http://192.168.6.92:8501\n",
-      "\n",
-      "  For better performance, install the Watchdog module:\n",
-      "\n",
-      "  $ xcode-select --install\n",
-      "  $ pip install watchdog\n",
-      "            \n"
-     ]
     }
    ],
    "source": [
