--- a/examples/text_summarization/run.ipynb
+++ b/examples/text_summarization/run.ipynb
@@ -17,7 +17,7 @@
    "id": "828785b7-7b94-41cb-99e4-097312876118",
    "metadata": {},
    "source": [
-    "<h1 style=\"text-align: center;\">Edge Case Detection: Text Summarization</h1>"
+    "<h1 style=\"text-align: center;\">Drift Detection: Text Summarization</h1>"
    ]
   },
   {
