--- a/examples/fraud_detection/run.ipynb
+++ b/examples/fraud_detection/run.ipynb
@@ -715,10 +715,12 @@
     "            recent_acc = sum(self.acc_arr[i:i+self.window_size])/self.window_size\n",
     "            \n",
     "            # Logging to UpTrain dashboard\n",
-    "            self.log_handler.add_scalars('custom_metrics', {\n",
-    "                    'initial_acc': self.initial_acc,\n",
-    "                    'recent_acc': recent_acc,\n",
-    "                }, i, self.dashboard_name)\n",
+    "            self.log_handler.add_scalars('custom_metrics', \n",
+    "                    {'y_acc': self.initial_acc},\n",
+    "                i, self.dashboard_name, file_name='initial_acc')\n",
+    "            self.log_handler.add_scalars('custom_metrics', \n",
+    "                    {'y_acc': recent_acc, },\n",
+    "                i, self.dashboard_name, file_name='recent_acc')\n",
     "            \n",
     "            # Send an alert when recent model performance goes down \n",
     "            if (self.initial_acc - recent_acc > self.thres) and (not self.is_drift_detected):\n",
@@ -826,7 +828,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "tensorflow_env",
    "language": "python",
    "name": "python3"
   },
@@ -840,11 +842,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.4"
   },
   "vscode": {
    "interpreter": {
-    "hash": "9545c455b197f2a904e8a44b25c9f43f9436523cf18f2465849be78ad0c6016f"
+    "hash": "5c9d59ef8fd7319b343529049cd41b7d67724075998fb85365859f5b386c072d"
    }
   }
  },
